# NFDecoder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
ci/: Brewfile  README.md  android.py  androidlinux.py  androidwindows.py  build_options.py  ci.yaml  ios.py  linux.py  linux.sh  llvm-run.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  nfbuildwindows.py  osx.py  osx.sh  requirements.txt  windows.ps1
cmake-modules/: FindFFmpeg.cmake
include/NFDecoder/: DataProvider.h  DataProviderFactory.h  Decoder.h  Decrypter.h  DecrypterFactory.h  Factory.h  Manifest.h  ManifestFactory.h  NFDecoder.h  NFDecoderMimeTypes.h
libraries/: CMakeLists.txt  TinySoundFont.patch  config.h.in  opusfile.patch  udt.patch  vorbis.patch
source/: CMakeLists.txt  DataProvider.cpp  DataProviderFactory.cpp  DataProviderFactoryImplementation.cpp  DataProviderFactoryImplementation.h  DataProviderFileImplementation.cpp  DataProviderFileImplementation.h  DataProviderHTTPImplementation.cpp  DataProviderHTTPImplementation.h  DataProviderMemoryImplementation.cpp  DataProviderMemoryImplementation.h  Decoder.cpp  DecoderAVCodecImplementation.cpp  DecoderAVCodecImplementation.h  DecoderAndroidImplementation.cpp  DecoderAndroidImplementation.h  DecoderAudioConverterImplementation.cpp  DecoderAudioConverterImplementation.h  DecoderDashToHLSTransmuxerImplementation.cpp  DecoderDashToHLSTransmuxerImplementation.h  DecoderFLACImplementation.cpp  DecoderFLACImplementation.h  DecoderMidiImplementation.cpp  DecoderMidiImplementation.h  DecoderNormalisationImplementation.cpp  DecoderNormalisationImplementation.h  DecoderOggImplementation.cpp  DecoderOggImplementation.h  DecoderOpusImplementation.cpp  DecoderOpusImplementation.h  DecoderSpeexImplementation.cpp  DecoderSpeexImplementation.h  DecoderVorbisImplementation.cpp  DecoderVorbisImplementation.h  DecoderWavImplementation.cpp  DecoderWavImplementation.h  DecoderWindowsImplementation.cpp  DecoderWindowsImplementation.h  Decrypter.cpp  DecrypterFactory.cpp  (+29 more)
source/cli/: CMakeLists.txt  NFDecoderCLI.cpp
source/com/spotify/NFDecoder/: Decoder.java
tools/: fix-udt-cmake.py  generate-cli.py  generate-ubsan-blacklist.py  generate-version.py
